# SLiPP_Plus

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BIODOLPHIN_EXTENSION.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  MODEL_V2_SPEC.md  Makefile  NEXT_AGENT_HANDOFF.md  PROMPT.md  README.md  RELEASE_NOTES_v0.1.0.md  RESEARCH_LOG.md  docs  examples  experiments  handoff.md  pyproject.toml  refactoring_prompt.md  refs.bib  reports  summary_for_dassama.tex
configs/: caver.yaml  day1.yaml  paper17_aa12_tunnel_shape_family_encoder.yaml  paper17_aa16_tunnel_shape_family_encoder.yaml  paper17_aa20_family_encoder.yaml  paper17_aa20_tunnel_shape_family_encoder.yaml  v49_tunnel_geom_family_encoder.yaml  v49_tunnel_shape_family_encoder.yaml  v61.yaml  v_caver_t12.yaml  v_graph_tunnel.yaml  v_lipid_boundary.yaml  v_plm_ste.yaml  v_sterol.yaml  v_sterol_boundary_refactor.yaml  v_sterol_derived.yaml  v_sterol_derived_flat.yaml  v_sterol_family_plus_moe.yaml  v_sterol_hierarchical.yaml  v_sterol_moe.yaml  v_sterol_pair_moe.yaml  v_sterol_v2.yaml  v_sterol_v2_hybrid.yaml  v_sterol_vdw22_derived_flat.yaml  v_tunnel.yaml  v_tunnel_aligned.yaml
docs/: CHANGELOG.md  DATASHEET.md  api.md  reproducibility.md
examples/: README.md  v_sterol_ensemble.py
experiments/: queued.md  registry.yaml
reference/: README.md
reports/: DAY_1_SUMMARY.md  ablation_matrix.md  boundary_refactor_holdout_attempt.md  compact_weight_local_refinement.md  covariate_shift_threshold_ablation_2026_05_09.md  domain_shift_component_rescue.md  domain_shift_component_rescue_rows.csv  domain_shift_component_rescue_summary.csv  domain_shift_false_negative_features.csv  ensemble_ablation.md  family_plus_moe_holdout_completion.md  holdout_label_source_audit_2026_05_09.md  ingest_log.md  legacy_rescue_base_fn_selection_audit_2026_05_09.md  legacy_rescue_gate_diagnostic_sweep.csv  legacy_rescue_gate_diagnostic_sweep_2026_05_09.md  legacy_rescue_holdout_safe_ablation_2026_05_09.md  legacy_rescue_rule_ablation_2026_05_09.md  legacy_rescue_structure_stress_audit_2026_05_09.md  legacy_rescue_unlabeled_target_selection_audit_2026_05_09.md  metrics_table.md  ste_imbalance_ablation.md  sterol_id_sprint.md  tiebreaker_ablation.md  v_sterol_holdout_completion.md
scripts/: chain_tiebreakers.py  (+5 more)
(+384 files in other folders)
